app2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app2
  labels:
    app: nodejs-app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-app2
  template:
    metadata:
      labels:
        app: nodejs-app2
    spec:
      containers:
      - name: nodejs-app2
        image: jrmartinezreluz/nodejs-app2:latest
        ports:
        - containerPort: 80
