app2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-2
  namespace: app2
spec:
  type: ClusterIP
  selector:
    app: nodejs-app-2
  ports:
    - port: 80
      targetPort: 3000
